--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <title>Frontend Mentor Challenge</title>
 
   <!-- Google Fonts Import -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,26 +41,64 @@
   </header>
 
   <main>
-    @nathanf
-    1987
-    Followers
-    12 Today
-
-    @nathanf
-    1044
-    Followers
-    99 Today
-
-    @realnathanf
-    11k
-    Followers
-    1099 Today
-
-    Nathan F.
-    8239
-    Subscribers
-    144 Today
-
+    <section class="container card-grid">
+      <div class="card card--facebook">
+        <div class="card__platform">
+          <img class="card__icon" src="images/icon-facebook.svg" alt="Facebook icon" />
+          <div class="card__username">@nathanf</div>
+        </div>
+        <div class="card__count card__count--big">
+          1987
+          <div class="card__label">Followers</div>
+        </div>
+        <div class="card__change card__change--up">
+          <img src="images/icon-up.svg" alt="up arrow" />
+          <div class="card__numchange">12 Today</div>
+        </div>
+      </div>
+      <div class="card card--twitter">
+        <div class="card__platform">
+          <img class="card__icon" src="images/icon-twitter.svg" alt="Twitter icon" />
+          <div class="card__username">@nathanf</div>
+        </div>
+        <div class="card__count card__count--big">
+          1044
+          <div class="card__label">Followers</div>
+        </div>
+        <div class="card__change card__change--up">
+          <img src="images/icon-up.svg" alt="up arrow" />
+          <div class="card__numchange">99 Today</div>
+        </div>
+      </div>
+      <div class="card card--instagram">
+        <div class="card__platform">
+          <img class="card__icon" src="images/icon-instagram.svg" alt="Instagram icon" />
+          <div class="card__username">@realnathanf</div>
+        </div>
+        <div class="card__count card__count--big">
+          11k
+          <div class="card__label">Followers</div>
+        </div>
+        <div class="card__change card__change--up">
+          <img src="images/icon-up.svg" alt="up arrow" />
+          <div class="card__numchange">1099 Today</div>
+        </div>
+      </div>
+      <div class="card card--youtube">
+        <div class="card__platform">
+          <img class="card__icon" src="images/icon-youtube.svg" alt="YouTube icon" />
+          <div class="card__username">Nathan F.</div>
+        </div>
+        <div class="card__count card__count--big">
+          8239
+          <div class="card__label">Subscribers</div>
+        </div>
+        <div class="card__change card__change--down">
+          <img src="images/icon-down.svg" alt="down arrow" />
+          <div class="card__numchange">144 Today</div>
+        </div>
+      </div>
+    </section>
 
 
     Overview - Today
