--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor Challenge</title>
+  <title>Frontend Mentor Challenge | Social Media Dashboard</title>
 
   <!-- Google Fonts Import -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -99,41 +99,113 @@
         </div>
       </div>
     </section>
-
-
-    Overview - Today
-
-    Page Views
-    87
-    3%
-
-    Likes
-    52
-    2%
-
-    Likes
-    5462
-    2257%
-
-    Profile Views
-    52k
-    1375%
-
-    Retweets
-    117
-    303%
-
-    Likes
-    507
-    553%
-
-    Likes
-    107
-    19%
-
-    Total Views
-    1407
-    12%
+    <h2 class="container change-title">Overview - Today</h2>
+    <section class="container card-grid">
+      <div class="card change-grid">
+        <div class="change-grid__platform">
+          <div class="change-grid__label">Page Views</div>
+          <img src="images/icon-facebook.svg" alt="Facebook icon" />
+        </div>
+        <div class="change-grid__statistics">
+          <div class="card__count--small">87</div>
+          <div class="card__change card__change--up">
+            <img src="images/icon-up.svg" alt="up arrow icon" />
+            <div class="card__numchange card__numchange--small">3%</div>
+          </div>
+        </div>
+      </div>
+      <div class="card change-grid">
+        <div class="change-grid__platform">
+          <div class="change-grid__label">Likes</div>
+          <img src="images/icon-facebook.svg" alt="Facebook icon" />
+        </div>
+        <div class="change-grid__statistics">
+          <div class="card__count--small">52</div>
+          <div class="card__change card__change--down">
+            <img src="images/icon-down.svg" alt="down arrow icon" />
+            <div class="card__numchange card__numchange--small">2%</div>
+          </div>
+        </div>
+      </div>
+      <div class="card change-grid">
+        <div class="change-grid__platform">
+          <div class="change-grid__label">Likes</div>
+          <img src="images/icon-instagram.svg" alt="Instagram icon" />
+        </div>
+        <div class="change-grid__statistics">
+          <div class="card__count--small">5462</div>
+          <div class="card__change card__change--up">
+            <img src="images/icon-up.svg" alt="up arrow icon" />
+            <div class="card__numchange card__numchange--small">2257%</div>
+          </div>
+        </div>
+      </div>
+      <div class="card change-grid">
+        <div class="change-grid__platform">
+          <div class="change-grid__label">Profile Views</div>
+          <img src="images/icon-instagram.svg" alt="Instagram icon" />
+        </div>
+        <div class="change-grid__statistics">
+          <div class="card__count--small">52k</div>
+          <div class="card__change card__change--up">
+            <img src="images/icon-up.svg" alt="up arrow icon" />
+            <div class="card__numchange card__numchange--small">1375%</div>
+          </div>
+        </div>
+      </div>
+      <div class="card change-grid">
+        <div class="change-grid__platform">
+          <div class="change-grid__label">Retweets</div>
+          <img src="images/icon-twitter.svg" alt="Twitter icon" />
+        </div>
+        <div class="change-grid__statistics">
+          <div class="card__count--small">117</div>
+          <div class="card__change card__change--up">
+            <img src="images/icon-up.svg" alt="up arrow icon" />
+            <div class="card__numchange card__numchange--small">303%</div>
+          </div>
+        </div>
+      </div>
+      <div class="card change-grid">
+        <div class="change-grid__platform">
+          <div class="change-grid__label">Likes</div>
+          <img src="images/icon-twitter.svg" alt="Twitter icon" />
+        </div>
+        <div class="change-grid__statistics">
+          <div class="card__count--small">507</div>
+          <div class="card__change card__change--up">
+            <img src="images/icon-up.svg" alt="up arrow icon" />
+            <div class="card__numchange card__numchange--small">553%</div>
+          </div>
+        </div>
+      </div>
+      <div class="card change-grid">
+        <div class="change-grid__platform">
+          <div class="change-grid__label">Likes</div>
+          <img src="images/icon-youtube.svg" alt="YouTube icon" />
+        </div>
+        <div class="change-grid__statistics">
+          <div class="card__count--small">107</div>
+          <div class="card__change card__change--down">
+            <img src="images/icon-down.svg" alt="down arrow icon" />
+            <div class="card__numchange card__numchange--small">19%</div>
+          </div>
+        </div>
+      </div>
+      <div class="card change-grid">
+        <div class="change-grid__platform">
+          <div class="change-grid__label">Total Views</div>
+          <img src="images/icon-youtube.svg" alt="YouTube icon" />
+        </div>
+        <div class="change-grid__statistics">
+          <div class="card__count--small">1407</div>
+          <div class="card__change card__change--down">
+            <img src="images/icon-down.svg" alt="down arrow icon" />
+            <div class="card__numchange card__numchange--small">12%</div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
