--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <img src="images/icon-facebook.svg" alt="Facebook icon" />
         </div>
         <div class="change-grid__statistics">
-          <div class="card__count--small">87</div>
+          <div class="card__count card__count--small">87</div>
           <div class="card__change card__change--up">
             <img src="images/icon-up.svg" alt="up arrow icon" />
             <div class="card__numchange card__numchange--small">3%</div>
@@ -120,7 +120,7 @@
           <img src="images/icon-facebook.svg" alt="Facebook icon" />
         </div>
         <div class="change-grid__statistics">
-          <div class="card__count--small">52</div>
+          <div class="card__count card__count--small">52</div>
           <div class="card__change card__change--down">
             <img src="images/icon-down.svg" alt="down arrow icon" />
             <div class="card__numchange card__numchange--small">2%</div>
@@ -133,7 +133,7 @@
           <img src="images/icon-instagram.svg" alt="Instagram icon" />
         </div>
         <div class="change-grid__statistics">
-          <div class="card__count--small">5462</div>
+          <div class="card__count card__count--small">5462</div>
           <div class="card__change card__change--up">
             <img src="images/icon-up.svg" alt="up arrow icon" />
             <div class="card__numchange card__numchange--small">2257%</div>
@@ -146,7 +146,7 @@
           <img src="images/icon-instagram.svg" alt="Instagram icon" />
         </div>
         <div class="change-grid__statistics">
-          <div class="card__count--small">52k</div>
+          <div class="card__count card__count--small">52k</div>
           <div class="card__change card__change--up">
             <img src="images/icon-up.svg" alt="up arrow icon" />
             <div class="card__numchange card__numchange--small">1375%</div>
@@ -159,7 +159,7 @@
           <img src="images/icon-twitter.svg" alt="Twitter icon" />
         </div>
         <div class="change-grid__statistics">
-          <div class="card__count--small">117</div>
+          <div class="card__count card__count--small">117</div>
           <div class="card__change card__change--up">
             <img src="images/icon-up.svg" alt="up arrow icon" />
             <div class="card__numchange card__numchange--small">303%</div>
@@ -172,7 +172,7 @@
           <img src="images/icon-twitter.svg" alt="Twitter icon" />
         </div>
         <div class="change-grid__statistics">
-          <div class="card__count--small">507</div>
+          <div class="card__count card__count--small">507</div>
           <div class="card__change card__change--up">
             <img src="images/icon-up.svg" alt="up arrow icon" />
             <div class="card__numchange card__numchange--small">553%</div>
@@ -185,7 +185,7 @@
           <img src="images/icon-youtube.svg" alt="YouTube icon" />
         </div>
         <div class="change-grid__statistics">
-          <div class="card__count--small">107</div>
+          <div class="card__count card__count--small">107</div>
           <div class="card__change card__change--down">
             <img src="images/icon-down.svg" alt="down arrow icon" />
             <div class="card__numchange card__numchange--small">19%</div>
@@ -198,7 +198,7 @@
           <img src="images/icon-youtube.svg" alt="YouTube icon" />
         </div>
         <div class="change-grid__statistics">
-          <div class="card__count--small">1407</div>
+          <div class="card__count card__count--small">1407</div>
           <div class="card__change card__change--down">
             <img src="images/icon-down.svg" alt="down arrow icon" />
             <div class="card__numchange card__numchange--small">12%</div>
